# django_permission_engine

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPLEMENTATION_PLAN_OPT_IN.md  INSTALLATION.md  MANIFEST.in  README.md  SETUP.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
django_permission_engine/: __init__.py  apps.py  helpers.py  models.py  permission_management.py  permissions.py  registry.py  urls.py  views.py
django_permission_engine/migrations/: 0001_initial.py
docs/: README.md  action-coupling.md  architecture.md  catalog-api.md  core-concepts.md  crud-normalization.md  deployment.md  drf-integration.md  drift-prevention.md  opt-in-permissions.md  performance.md  permission-definition.md  permission-management-api.md  persistence.md  registry-engine.md  roles-users.md  runtime-resolution.md  security.md  use-cases.md  versioning.md
docs_sphinx/: Makefile  conf.py  examples.rst  index.rst  installation.rst  make.bat  quickstart.rst
docs_sphinx/api/: index.rst
roadmap/: 01-project-setup.md  02-database-models.md  03-registry-engine.md  04-permission-definition.md  05-runtime-resolution.md  06-catalog-api.md  07-management-commands.md  08-testing.md  09-documentation.md  10-packaging-publishing.md  README.md
tests/: conftest.py  factories.py  settings.py  test_all.py  test_catalog_api.py  test_integration.py  test_management_commands.py  test_models.py  test_performance.py  test_permission_definition.py  test_permissions.py  test_registry.py  urls.py
(+3 files in other folders)
